--- a/tbschedule-test/pom.xml
+++ b/tbschedule-test/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>com.test.tbschedule</artifactId>
+    <artifactId>test-tbschedule</artifactId>
     <packaging>war</packaging>
 
     <name>com.test.tbschedule Maven Webapp</name>
