--- a/log-test/pom.xml
+++ b/log-test/pom.xml
@@ -54,6 +54,11 @@
             <artifactId>lombok</artifactId>
             <version>1.14.8</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>16.0.1</version>
+        </dependency>
     </dependencies>
 
 
